<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_news"
            android:icon="@drawable/more"
            android:textSize="@dimen/text_size_title"
            android:title="@string/my_news" />
    </group>
    <item android:title="@string/menu">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_search"
                    android:icon="@drawable/search_blk"
                    android:textSize="@dimen/text_size_normal"
                    android:title="@string/search" />
                <item
                    android:id="@+id/activity_main_drawer_notification"
                    android:icon="@drawable/notification"
                    android:textSize="@dimen/text_size_normal"
                    android:title="@string/notfication_menu" />
            </group>

        </menu>
    </item>

    <item android:title="@string/categories">
        <menu>
            <group android:checkableBehavior="single">
                <item

                    android:id="@+id/activity_main_drawer_topstories"
                    android:icon="@drawable/star"
                    android:textSize="@dimen/text_size_normal"
                    android:title="@string/top_stories_tab" />
                <item
                    android:id="@+id/activity_main_drawer_mostpopulate"
                    android:icon="@drawable/arrow_up_right"
                    android:textSize="@dimen/text_size_normal"
                    android:title="@string/most_polular_tab" />

                <item
                    android:id="@+id/activity_main_drawer_business"
                    android:icon="@drawable/business"
                    android:textSize="@dimen/text_size_normal"
                    android:title="@string/business_tab" />
                <item
                    android:id="@+id/activity_main_drawer_food"
                    android:icon="@drawable/food"
                    android:textSize="@dimen/text_size_normal"
                    android:title="@string/food_tab" />
                <item
                    android:id="@+id/activity_main_drawer_movies"
                    android:icon="@drawable/movie"
                    android:textSize="@dimen/text_size_normal"
                    android:title="@string/movies_tab" />
                <item
                    android:id="@+id/activity_main_drawer_sports"
                    android:icon="@drawable/sport"
                    android:textSize="@dimen/text_size_normal"
                    android:title="@string/sport_tab" />
                <item
                    android:id="@+id/activity_main_drawer_tech"
                    android:icon="@drawable/tech"
                    android:textSize="@dimen/text_size_normal"
                    android:title="@string/tech_tab" />
                <item
                    android:id="@+id/activity_main_drawer_travel"
                    android:icon="@drawable/travel"
                    android:textSize="@dimen/text_size_normal"
                    android:title="@string/travel_tab" />

            </group>

        </menu>
    </item>

</menu>