...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_main_item_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="TODO" />

    </LinearLayout>

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_main_item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_normal"
...
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_main_item_categorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/fragment_main_item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_normal"
...
